# anyai

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: data_analysis.py  document_pipeline.py  image_analysis.py  local_chat.py  mcp_server.py  quick_start.py  voice_assistant.py
src/anyai/: __init__.py  cli.py  config.py  core.py  errors.py  image.py  logging.py  mcp_server.py  models.py  pipeline.py  privacy.py  text.py  utils.py
tests/: test_cli.py  test_config.py  test_core.py  test_doctor.py  test_errors.py  test_image.py  test_logging.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_proxy.py  test_real_world.py  test_text.py  test_utils.py  test_utils_extended.py
